fixed spacing between title and picture

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,3 +54,7 @@ width: auto;
 #groceryFix {
     margin-top: 1.5px;
 }
+
+.card-image {
+    margin-top: -9px;
+}
